added sample/example data and pulling from youtube api successfully

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <title>Jacki Yanamura MVP Full Stack Application</title>
-    <style></style>
+
+    <!--Import Google Icon Font-->
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!--Import materialize.css-->
+    <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
+    <!-- <link type="text/css" rel="stylesheet" href="./../client/src/styles/materialize.css"> -->
+
+    <!--Let browser know website is optimized for mobile-->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
   </head>
 
   <body>
     <div id="app">This is an HTML rendered page</div>
+
+    <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
