--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
 
   <body>
     <div id="app">This is an HTML rendered page</div>
+    <div id="Twitter">
+      <a href="https://twitter.com/intent/tweet?button_hashtag=Motivation&ref_src=twsrc%5Etfw" className="twitter-hashtag-button" data-show-count="false">Tweet #Motivation</a><script async src="https://platform.twitter.com/widgets.js" charSet="utf-8"></script>
 
+    </div>
     <!-- <script type="text/javascript" src="js/materialize.min.js"></script> -->
     <script type="text/javascript" src="bundle.js"></script>
   </body>
